<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:overScrollMode="never"
    tools:context=".presentation.nav_medicine.screens.InfoMedicineScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgMedicineInfoImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/img_default_medicine_photo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvMedicineInfoDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:padding="15dp"
            android:text="@string/medicine_description"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/imgMedicineInfoImage" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvMedicinesInfoDoctorsName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:text="@string/doctors_name"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMedicineInfoDescription" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvMedicineInfoPrise"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="right"
            android:paddingHorizontal="15dp"
            android:text="@string/price"
            android:textColor="#E41919"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMedicinesInfoDoctorsName" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:enabled="false"
            android:focusable="true"
            android:text="@string/order"
            android:textAllCaps="false"
            app:backgroundTint="#12E41A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMedicineInfoPrise"
            app:strokeColor="#3FE845"
            app:strokeWidth="1dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>