<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.nav_animals.screens.EditAnimalsScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilType"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="#EDEBEB"
            android:gravity="center_vertical"
            android:hint="@string/type"
            app:endIconMode="dropdown_menu"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_nav_bottom_animals">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/tvAutoType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dog"
                android:textColor="@color/add_text_color"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilName"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="#EDEBEB"
            android:gravity="center_vertical"
            android:hint="@string/name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ilType"
            app:startIconDrawable="@drawable/ic_nav_bottom_animals">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tuzik"
                android:textColor="@color/add_text_color"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilAge"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="#EDEBEB"
            android:gravity="center_vertical"
            android:hint="@string/age"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ilName"
            app:startIconDrawable="@drawable/ic_nav_bottom_animals">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2.5"
                android:textColor="@color/add_text_color"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilColor"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="#EDEBEB"
            android:gravity="center_vertical"
            android:hint="@string/color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ilAge"
            app:startIconDrawable="@drawable/ic_nav_bottom_animals">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Black"
                android:textColor="@color/add_text_color"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilAnimalType"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="#EDEBEB"
            android:gravity="center_vertical"
            android:hint="@string/animal_type"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ilColor"
            app:startIconDrawable="@drawable/ic_nav_bottom_animals">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAnimalType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dalmatian"
                android:textColor="@color/add_text_color"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilGender"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="#EDEBEB"
            android:gravity="center_vertical"
            android:hint="@string/gender"
            app:endIconMode="dropdown_menu"
            app:layout_constraintTop_toBottomOf="@id/ilAnimalType"
            app:startIconDrawable="@drawable/ic_nav_bottom_animals">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/tvGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Male/Female"
                android:textColor="@color/add_text_color"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilAnimalWeight"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="#EDEBEB"
            android:gravity="center_vertical"
            android:hint="@string/weight"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ilGender"
            app:startIconDrawable="@drawable/ic_nav_bottom_animals">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAnimalWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="2.5kg"
                android:textColor="@color/add_text_color"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilAnimalWidthHeight"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="#EDEBEB"
            android:gravity="center_vertical"
            android:hint="@string/width_height"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ilAnimalWeight"
            app:startIconDrawable="@drawable/ic_nav_bottom_animals">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAnimalWidthHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="0.5/0.8m"
                android:textColor="@color/add_text_color"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivAnimalsImage"
            android:layout_width="200dp"
            android:layout_height="180dp"
            android:layout_marginTop="50dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_vet1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ilAnimalWidthHeight" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvAnimalsImageInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/animal_image"
            android:textColor="@color/add_text_color"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivAnimalsImage" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilAnimalAdditional"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            android:background="#EDEBEB"
            android:gravity="start"
            android:hint="@string/additions"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAnimalsImageInfo"
            app:startIconDrawable="@drawable/ic_nav_bottom_animals">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAdditional"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:textColor="@color/add_text_color"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#52CA6C"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ilAnimalAdditional" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>